Archive2/ac/822ffd8cd100ac/output
main.cpp:17:24: error: expected '(' for function-style cast or type construction
    float f = pi<float>;
              ~~~~~~~~~^
1 error generated.
